Closed Bug 375917 Opened 17 years ago Closed 17 years ago

Incorrect parameter passing in nsCSSRendering.cpp

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: reg, Unassigned)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a4pre) Gecko/20070329 Minefield/3.0a4pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a4pre) Gecko/20070329 Minefield/3.0a4pre

Several calls to DrawSolidBorderSegment have a PRBool as the third arguments, when it takes appUnitsPerPixel (which is incorrectly named twipsPerPixel).  Patch in a second.

Reproducible: Always
Attached patch Simple fix.Splinter Review
Simple fix.  Unless someone was trying to be really creative...  But then there should be a comment, and PR_TRUE/PR_FALSE shouldn't be used...
Attachment #260079 - Flags: review?(roc)
This code is in the midst of being rewritten, but we'll take this!
Status: UNCONFIRMED → NEW
Ever confirmed: true
checked in
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
It seems like this bug ought to have exhibited itself in actual testcases.
Flags: in-testsuite?
(In reply to comment #4)
> It seems like this bug ought to have exhibited itself in actual testcases.
> 

I think this would have only resulted in the code taking a slow path.  I don't fully understand it, but it looked like it was just testing to see if the segment was smaller than a pixel and if it was, just draw a block.  The incorrect parameters would have caused those tests to fail.
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: