Bug 375917. Pass appunits-per-CSS-pixel ratio to DrawSolidBorderSegment instead of some meaningless boolean. patch by Jeremy Lea, r+sr=roc